Sprint 00-12: Complete CRUD mutation engine