@@ -9,37 +9,49 @@ import java.util.Objects;
  * <p>Örnek SQL:</p>
  *
  * <pre>
- * INSERT INTO users VALUES (1, 'Emre', 21);
+ * INSERT INTO users (id, name, age)
+ * VALUES (1, 'Emre', 21);
  * </pre>
  */
 public final class InsertStatement implements Statement {
 
     /**
-     * Kaydın ekleneceği tablo adı.
+     * Verinin ekleneceği tablo adı.
      */
     private final String tableName;
 
     /**
-     * INSERT sorgusunda belirtilen değerler.
+     * INSERT işleminde kullanılan sütunlar.
+     */
+    private final List<String> columns;
+
+    /**
+     * Sütunlara karşılık gelen değerler.
      */
     private final List<Object> values;
 
-    /**
-     * Yeni bir InsertStatement oluşturur.
-     *
-     * @param tableName hedef tablo adı
-     * @param values    eklenecek değerler
-     */
     public InsertStatement(
             String tableName,
+            List<String> columns,
             List<Object> values
     ) {
         this.tableName = validateTableName(tableName);
 
         Objects.requireNonNull(
-                values,
-                "Values cannot be null."
+                columns,
+                "Column list cannot be null."
         );
+
+        Objects.requireNonNull(
+                values,
+                "Value list cannot be null."
+        );
+
+        if (columns.isEmpty()) {
+            throw new IllegalArgumentException(
+                    "INSERT statement must contain at least one column."
+            );
+        }
 
         if (values.isEmpty()) {
             throw new IllegalArgumentException(
@@ -47,43 +59,38 @@ public final class InsertStatement implements Statement {
             );
         }
 
-        this.values = java.util.Collections.unmodifiableList(
-                new java.util.ArrayList<>(values)
-        );
+        if (columns.size() != values.size()) {
+            throw new IllegalArgumentException(
+                    "Column count and value count must be equal."
+            );
+        }
+
+        this.columns = columns.stream()
+                .map(this::validateColumnName)
+                .toList();
+
+        this.values = List.copyOf(values);
     }
 
-    /**
-     * Statement türünü döndürür.
-     *
-     * @return INSERT
-     */
     @Override
     public StatementType getType() {
         return StatementType.INSERT;
     }
 
-    /**
-     * Hedef tablo adını döndürür.
-     *
-     * @return tablo adı
-     */
     public String getTableName() {
         return tableName;
     }
 
-    /**
-     * Eklenecek değerleri değiştirilemez liste olarak döndürür.
-     *
-     * @return değer listesi
-     */
+    public List<String> getColumns() {
+        return columns;
+    }
+
     public List<Object> getValues() {
         return values;
     }
 
-    /**
-     * Tablo adını doğrular ve temizler.
-     */
     private String validateTableName(String tableName) {
+
         if (tableName == null || tableName.isBlank()) {
             throw new IllegalArgumentException(
                     "Table name cannot be null or blank."
@@ -103,10 +110,32 @@ public final class InsertStatement implements Statement {
         return normalizedName;
     }
 
+    private String validateColumnName(String columnName) {
+
+        if (columnName == null || columnName.isBlank()) {
+            throw new IllegalArgumentException(
+                    "Column name cannot be null or blank."
+            );
+        }
+
+        String normalizedName = columnName.trim();
+
+        if (!normalizedName.matches(
+                "[A-Za-z_][A-Za-z0-9_]*"
+        )) {
+            throw new IllegalArgumentException(
+                    "Invalid column name: " + columnName
+            );
+        }
+
+        return normalizedName;
+    }
+
     @Override
     public String toString() {
         return "InsertStatement{" +
                 "tableName='" + tableName + '\'' +
+                ", columns=" + columns +
                 ", values=" + values +
                 '}';
     }
